# p2p-chessvariants

./: .editorconfig  .env.example  .env.production  .env.project  .gitignore  .gitmodules  AGENTS.md  GEMINI.md  README copy.md  README.md  TODO.md  asset-manifest.json  conventions.md  index.html  justfile  package.json  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
.opencode/agents/: build.md  plan.md  quick.md  sonnet.md
.playwright-cli/: page-2026-05-28T00-10-34-913Z.yml  page-2026-05-28T00-21-32-468Z.yml  page-2026-05-28T00-40-43-025Z.yml  page-2026-05-28T00-40-59-440Z.yml
.todo/: fix-broken.md  flip-board-orientation.md  lobby-slots.md  read-variants-folder.md  setup-players-init-redesign.md
assets/: index.14332231.js  index.213ade8e.js  index.2f70e655.css  index.2f87f71a.js  index.3ac7d0a4.js  index.5fa58ff0.js  index.6c679c0c.js
docs/: TODO.md  api.md  implementation-status.md  rust-migration-plan.md
docs/examples/: bughouse.rhai  four_player_chess.rhai  seirawan_chess.rhai
docs/notes/: exampleVariant.md  exampleVariant.rhai  exampleVariantDescription.ts.md  google-sign-in.html  stash.ts  todo.md
public/: 404.html  index.html
public/dev-scripts/: bughouse.rhai  (+3 more)
rust/: Cargo.toml
rust/src/: error.rs  lib.rs  logging.rs  rhai_rust_error.rs
rust/src/game/: actions.rs  board.rs  engine_builtins.rs  entities.rs  game_progress.rs  game_result.rs  handler_registry.rs  mod.rs  moves.rs  piece.rs  piece_definition.rs  piece_defs.rs  piece_moves_finder.rs  standard.rs  state.rs  ui.rs  variant_config.rs  variant_description.rs
rust/src/modules/: builtins.rs  chess_logic.rs  mod.rs
rust/src/variant_context/: mod.rs
rust/tests/: variant_integration.rs
rust/tests/scripts/: chess.rhai  king_capture.rhai  simple_chess.rhai
scripts/: postinstall.cjs
specs/: scripting-api-v1-retired.md  scripting-api.md
src/: AnchorLink.tsx  App.css  App.test.tsx  App.tsx  AppRoutes.tsx  Layout.tsx  MatchFail.tsx  index.css  index.tsx  jwt.ts  main.tsx  serviceWorker.ts  theme.ts  vite-env.d.ts
todo/: move_type_attack_fix.md
todos/: 400-monaco-github.md  500-shared-memory.md
variants/: 4player.rhai  README.md  bughouse.rhai  chess.rhai  four_player_chess.rhai  seirawan_chess.rhai  simple_chess.rhai
(+195 files in other folders)
