[package]
name = "chessvariant-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = { version = "1.15.0", default-features = false, features = [
  "wasm-bindgen",
  "std",
  "unchecked",
  "only_i32",
  "f32_float",
  "no_module",
  "no_custom_syntax",
] }
serde-wasm-bindgen = "0.5.0"
thiserror = "1.0.44"
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.64"

[build]
target = "wasm32-unknown-unknown"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
