[package]
name = "chessvariant-engine"
version = "0.1.0"
edition = "2024"
description = "Chess variant engine with Rhai scripting API for WASM"
repository = "https://github.com/Relacibo/p2p-chessvariants"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = "0.8.12"
getrandom = { version = "0.3", features = ["wasm_js"] }
rhai = { version = "1.21.0", default-features = false, features = [
  "std",
  "unchecked",
  "only_i32",
  "f32_float",
  "no_custom_syntax",
  "serde",
] }
thiserror = "2.0.12"
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.77"
tsify = { version = "0.5.5", default-features = false, features = [
  "wasm-bindgen",
  "js",
] }
serde_json = "1.0"
serde_with = "3.12.0"
serde-wasm-bindgen = "0.6.5"
